# YOLOv8-Object-Detection-with-ROS2

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/yolobot_control/share/yolobot_control/: local_setup.sh  package.sh
install/yolobot_description/share/yolobot_description/: local_setup.sh  package.sh
install/yolobot_gazebo/share/yolobot_gazebo/: package.sh
install/yolobot_recognition/lib/yolobot_recognition/: yolov8_ros2_subscriber.py
install/yolobot_recognition/share/ament_index/resource_index/parent_prefix_path/: yolobot_recognition
install/yolobot_recognition/share/yolobot_recognition/: local_setup.sh  package.sh
install/yolov8_msgs/share/yolov8_msgs/: package.sh
log/: latest_build  latest_list
src/: README.md
src/yolobot_recognition/scripts/: yolov8_ros2_pt.py
src/yolov8_msgs/: CMakeLists.txt
